@@ -1,3 +1,6 @@
+* Thu Jun 06 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> -0.3.0-0
+- Add v2 compliance_markup data
+
 * Thu Mar 28 2019 Jim Anderson <thesemicolons@protonmail.com> - 0.2.2-0
 - Moved code for defining $aesni from params.pp to init.pp
 
